Datos fake introducidos en la base de datos al iniciar el programa

--- a/SG_MAUI_RamSerDav_/SG_MAUI_RamSerDav_.csproj
+++ b/SG_MAUI_RamSerDav_/SG_MAUI_RamSerDav_.csproj
@@ -64,6 +64,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="MainPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="MVVM\Views\GestionUsuariosView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
