--- a/SG_MAUI_RamSerDav_/SG_MAUI_RamSerDav_.csproj
+++ b/SG_MAUI_RamSerDav_/SG_MAUI_RamSerDav_.csproj
@@ -67,6 +67,9 @@
 	  <MauiXaml Update="MainPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="MVVM\Views\PPrincipalView.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="MVVM\Views\GestionUsuariosView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
