ImagenButtons bindeados con comandos correspondientes del viewmodel

--- a/SG_MAUI_RamSerDav_/SG_MAUI_RamSerDav_.csproj
+++ b/SG_MAUI_RamSerDav_/SG_MAUI_RamSerDav_.csproj
@@ -49,6 +49,8 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Images\no_elementos.png" />
+	  <None Remove="Resources\Images\salir.png" />
+	  <None Remove="Resources\Images\usuarios.png" />
 	</ItemGroup>
 
 	<ItemGroup>
