Checkbox implementado y ajustes en el diseño

--- a/SG_MAUI_RamSerDav_/SG_MAUI_RamSerDav_.csproj
+++ b/SG_MAUI_RamSerDav_/SG_MAUI_RamSerDav_.csproj
@@ -48,6 +48,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\atras.png" />
 	  <None Remove="Resources\Images\no_elementos.png" />
 	  <None Remove="Resources\Images\salir.png" />
 	  <None Remove="Resources\Images\usuarios.png" />
